# sample_rust_back

./: .env  .gitignore  Cargo.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
src/: app.rs  config.rs  error.rs  main.rs
src/dto/: common.rs  user.rs
src/dto/common/: data.rs  loginrequest.rs  requestinfo.rs  response.rs  responseinfo.rs  respose.rs
src/dto/user/: userinfo.rs
src/routes/: health.rs  login.rs  mod.rs
