[package]
name = "sample_rust_back"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }

serde = { version = "1", features = ["derive"] }

tower-http = { version = "0.5", features = ["cors", "trace"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

dotenvy = "0.15"
thiserror = "1"