[package]
name = "sample_rust_back"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros"] }

dotenvy = "0.15"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

thiserror = "2"
